--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/constants/constants.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/controllers/login.js"></script>
