--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/controllers/orcamento.js"></script>
         <script src="scripts/controllers/cliente.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/services/authentication.js"></script>
         <script src="scripts/services/browser.js"></script>
         <script src="scripts/services/providerProduto.js"></script>
         <!-- endbuild -->
