--- a/app/index.html
+++ b/app/index.html
@@ -21,47 +21,15 @@
   </head>
   <body ng-app="commercialApp">
     <!--[if lte IE 8]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">Você está usando um navegador <strong>desatualizado</strong>. Por favor <a href="http://browsehappy.com/">atualize seu navegador</a> para melhorar sua experiência.</p>
     <![endif]-->
-    <div class="banner"></div>
-
-    <div class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-
-          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#menu-collapse" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-
-          <!--Logotipo da barra de menu-->
-          <!--<a href="#" class="navbar-brand">BestSeller</a>-->
-        </div>
-
-        <div class="collapse navbar-collapse" id="menu-collapse">
-          <ul class="nav navbar-nav nav-center">
-            <li><a ng-href="#/home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-            <li><a ng-href="#/orcamento"><span class="glyphicon glyphicon-shopping-cart"></span> Orçamento</a></li>
-            <li><a ng-href="#"><span class="glyphicon glyphicon-user"></span> Clientes</a></li>
-            <li><a ng-href="#"><span class="glyphicon glyphicon-refresh"></span> Atualização</a></li>
-            <li><a ng-href="#"><span class="glyphicon glyphicon-cog"></span> Configurações</a></li>
-          </ul>
-        </div>
-
-      </div>
-    </div>
+    <div ng-include="'partials/header.html'" ng-hide="currentPath === '/login'"></div>
 
     <div class="container">
       <div ng-view=""></div>
     </div>
 
-    <div class="navbar navbar-default navbar-fixed-bottom">
-    <!--<div class="footer">-->
-      <div>
-      </div>
-    </div>
+    <div ng-include="'partials/footer.html'"></div>
 
 
     <!-- build:js(.) scripts/vendor.js -->
@@ -83,6 +51,11 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/constants/constants.js"></script>
+        <script src="scripts/constants/http_status.js"></script>
+        <script src="scripts/services/injector.js"></script>
+        <script src="scripts/services/authentication.js"></script>
+        <script src="scripts/services/browser.js"></script>
+        <script src="scripts/services/providerProduto.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/controllers/login.js"></script>
@@ -90,9 +63,6 @@
         <script src="scripts/controllers/orcamento.js"></script>
         <script src="scripts/controllers/cliente.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/services/authentication.js"></script>
-        <script src="scripts/services/browser.js"></script>
-        <script src="scripts/services/providerProduto.js"></script>
         <!-- endbuild -->
 </body>
 </html>
