--- a/app/index.html
+++ b/app/index.html
@@ -52,12 +52,14 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/constants/constants.js"></script>
         <script src="scripts/constants/http_status.js"></script>
+        <script src="scripts/constants/keys.js"></script>
         <script src="scripts/services/injector.js"></script>
         <script src="scripts/services/authentication.js"></script>
         <script src="scripts/services/browser.js"></script>
         <script src="scripts/services/providerProduto.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
+        <script src="scripts/directives/pressEnter.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/orcamento.js"></script>
