--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,8 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>
+
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/constants/constants.js"></script>
@@ -60,6 +62,7 @@
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/pressEnter.js"></script>
+        <script src="scripts/directives/filtroMoeda.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/orcamento.js"></script>
