--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,8 @@
         <script src="scripts/services/authentication.js"></script>
         <script src="scripts/services/browser.js"></script>
         <script src="scripts/services/providerProduto.js"></script>
+        <script src="scripts/services/providerVendedor.js"></script>
+        <script src="scripts/services/providerCliente.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/pressEnter.js"></script>
