--- a/app/index.html
+++ b/app/index.html
@@ -54,13 +54,15 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/constants/constants.js"></script>
         <script src="scripts/constants/http_status.js"></script>
-        <script src="scripts/constants/keys.js"></script>
+        <script src="scripts/constants/keyCodes.js"></script>
+        <script src="scripts/filters/filtroDecimal.js"></script>
         <script src="scripts/services/injector.js"></script>
         <script src="scripts/services/authentication.js"></script>
         <script src="scripts/services/browser.js"></script>
         <script src="scripts/services/providerProduto.js"></script>
         <script src="scripts/services/providerVendedor.js"></script>
         <script src="scripts/services/providerCliente.js"></script>
+        <script src="scripts/services/pedido.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/pressEnter.js"></script>
