--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,9 @@
     <!--[if lte IE 8]>
       <p class="browsehappy">Você está usando um navegador <strong>desatualizado</strong>. Por favor <a href="http://browsehappy.com/">atualize seu navegador</a> para melhorar sua experiência.</p>
     <![endif]-->
+
+    <div id="loading" ng-show="isLoading" ng-include="'partials/loading.html'"></div>
+
     <div ng-include="'partials/header.html'" ng-hide="currentPath === '/login'"></div>
 
     <div class="container">
@@ -45,10 +48,11 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
-    <script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>
+
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
@@ -56,13 +60,16 @@
         <script src="scripts/constants/http_status.js"></script>
         <script src="scripts/constants/keyCodes.js"></script>
         <script src="scripts/filters/filtroDecimal.js"></script>
-        <script src="scripts/services/injector.js"></script>
         <script src="scripts/services/authentication.js"></script>
         <script src="scripts/services/browser.js"></script>
         <script src="scripts/services/providerProduto.js"></script>
-        <script src="scripts/services/providerVendedor.js"></script>
-        <script src="scripts/services/providerCliente.js"></script>
+        <script src="scripts/services/providerPessoa.js"></script>
+        <script src="scripts/services/pessoa.js"></script>
+        <script src="scripts/services/dataSaida.js"></script>
+        <script src="scripts/services/produto.js"></script>
+        <script src="scripts/services/itemPedido.js"></script>
         <script src="scripts/services/pedido.js"></script>
+        <script src="scripts/services/interceptor.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/pressEnter.js"></script>
