--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/pressEnter.js"></script>
         <script src="scripts/directives/filtroMoeda.js"></script>
+        <script src="scripts/directives/numberOnly.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/orcamento.js"></script>
