--- a/app/index.html
+++ b/app/index.html
@@ -70,9 +70,11 @@
         <script src="scripts/services/itemPedido.js"></script>
         <script src="scripts/services/pedido.js"></script>
         <script src="scripts/services/interceptor.js"></script>
+        <script src="scripts/services/shiftEnterMap.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/pressEnter.js"></script>
+        <script src="scripts/directives/pressShiftEnter.js"></script>
         <script src="scripts/directives/filtroMoeda.js"></script>
         <script src="scripts/directives/numberOnly.js"></script>
         <script src="scripts/controllers/login.js"></script>
