--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
         <script src="scripts/services/browser.js"></script>
         <script src="scripts/services/providerProduto.js"></script>
         <script src="scripts/services/providerPessoa.js"></script>
+        <script src="scripts/services/providerModalidadePagamento.js"></script>
         <script src="scripts/services/pessoa.js"></script>
         <script src="scripts/services/dataSaida.js"></script>
         <script src="scripts/services/produto.js"></script>
@@ -71,6 +72,10 @@
         <script src="scripts/services/pedido.js"></script>
         <script src="scripts/services/interceptor.js"></script>
         <script src="scripts/services/shiftEnterMap.js"></script>
+        <script src="scripts/services/modalPagamento.js"></script>
+        <script src="scripts/services/modalBuscarPessoa.js"></script>
+        <script src="scripts/services/modalidade.js"></script>
+        <script src="scripts/services/pagamento.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/pressEnter.js"></script>
@@ -81,6 +86,8 @@
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/orcamento.js"></script>
         <script src="scripts/controllers/cliente.js"></script>
+        <script src="scripts/controllers/modalPagamento.js"></script>
+        <script src="scripts/controllers/modalBuscarPessoa.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
