--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
         <script src="scripts/services/providerProduto.js"></script>
         <script src="scripts/services/providerPessoa.js"></script>
         <script src="scripts/services/providerModalidadePagamento.js"></script>
+        <script src="scripts/services/providerCEP.js"></script>
         <script src="scripts/services/pessoa.js"></script>
         <script src="scripts/services/dataSaida.js"></script>
         <script src="scripts/services/produto.js"></script>
@@ -76,6 +77,7 @@
         <script src="scripts/services/modalBuscarPessoa.js"></script>
         <script src="scripts/services/modalidade.js"></script>
         <script src="scripts/services/pagamento.js"></script>
+        <script src="scripts/services/endereco.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/pressEnter.js"></script>
