--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>
+    <script src="bower_components/angular-ui-mask/dist/mask.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
