--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/services/providerPessoa.js"></script>
         <script src="scripts/services/providerModalidadePagamento.js"></script>
         <script src="scripts/services/providerEndereco.js"></script>
+        <script src="scripts/services/providerPedido.js"></script>
         <script src="scripts/services/pessoa.js"></script>
         <script src="scripts/services/dataSaida.js"></script>
         <script src="scripts/services/produto.js"></script>
