--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
         <script src="scripts/services/modalidade.js"></script>
         <script src="scripts/services/pagamento.js"></script>
         <script src="scripts/services/endereco.js"></script>
+        <script src="scripts/services/validadorDocumento.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/pressEnter.js"></script>
