--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,10 @@
       <div ng-view=""></div>
     </div>
 
+    <div class="alert alerta" ng-class="alerta.classe" role="alert">
+      {{alerta.mensagem}}
+    </div>
+
     <div ng-include="'partials/footer.html'"></div>
 
 
@@ -82,6 +86,8 @@
         <script src="scripts/services/pagamento.js"></script>
         <script src="scripts/services/endereco.js"></script>
         <script src="scripts/services/validadorDocumento.js"></script>
+        <script src="scripts/services/modalBuscarProduto.js"></script>
+        <script src="scripts/services/modalBuscarPedido.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/pressEnter.js"></script>
@@ -95,6 +101,8 @@
         <script src="scripts/controllers/modalPagamento.js"></script>
         <script src="scripts/controllers/modalBuscarPessoa.js"></script>
         <script src="scripts/controllers/modalBuscarEndereco.js"></script>
+        <script src="scripts/controllers/modalBuscarProduto.js"></script>
+        <script src="scripts/controllers/modalBuscarPedido.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
