--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/filters/filtroDecimal.js"></script>
         <script src="scripts/services/authentication.js"></script>
         <script src="scripts/services/browser.js"></script>
+        <script src="scripts/services/arrayPrototype.js"></script>
         <script src="scripts/services/providerProduto.js"></script>
         <script src="scripts/services/providerPessoa.js"></script>
         <script src="scripts/services/providerModalidadePagamento.js"></script>
