--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,8 @@
         <script src="scripts/directives/keyShortcuts.js"></script>
         <script src="scripts/directives/filtroMoeda.js"></script>
         <script src="scripts/directives/numberOnly.js"></script>
+        <script src="scripts/directives/editableElem.js"></script>
+        <script src="scripts/directives/relogio.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/orcamento.js"></script>
