--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
         <script src="scripts/constants/http_status.js"></script>
         <script src="scripts/constants/keyCodes.js"></script>
         <script src="scripts/filters/filtroDecimal.js"></script>
+        <script src="scripts/filters/truncate.js"></script>
         <script src="scripts/services/authentication.js"></script>
         <script src="scripts/services/browser.js"></script>
         <script src="scripts/services/arrayPrototype.js"></script>
