--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/services/validadorDocumento.js"></script>
         <script src="scripts/services/modalBuscarProduto.js"></script>
         <script src="scripts/services/modalBuscarPedido.js"></script>
+        <script src="scripts/services/usuario.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/keyShortcuts.js"></script>
@@ -98,6 +99,7 @@
         <script src="scripts/directives/editableElem.js"></script>
         <script src="scripts/directives/relogio.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/logout.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/orcamento.js"></script>
         <script src="scripts/controllers/cliente.js"></script>
