--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles/global.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="commercialApp">
+  <body ng-class="{ 'padding-bottom': currentPath !== '/login' }" ng-app="commercialApp">
     <!--[if lte IE 8]>
       <p class="browsehappy">Você está usando um navegador <strong>desatualizado</strong>. Por favor <a href="http://browsehappy.com/">atualize seu navegador</a> para melhorar sua experiência.</p>
     <![endif]-->
