--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,9 @@
         <script src="scripts/services/modalBuscarProduto.js"></script>
         <script src="scripts/services/modalBuscarPedido.js"></script>
         <script src="scripts/services/usuario.js"></script>
+        <script src="scripts/services/perfilUsuario.js"></script>
+        <script src="scripts/services/acessoUsuario.js"></script>
+        <script src="scripts/services/acesso.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/keyShortcuts.js"></script>
