--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,7 @@
         <script src="scripts/directives/relogio.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/logout.js"></script>
+        <script src="scripts/controllers/header.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/orcamento.js"></script>
         <script src="scripts/controllers/cliente.js"></script>
