--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
       {{alerta.mensagem}}
     </div>
 
-    <div name="footer" ng-include="'partials/footer.html'"></div>
+    <div name="footer" class="hidden-xs" ng-include="'partials/footer.html'"></div>
 
 
     <!-- build:js(.) scripts/vendor.js -->
