--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-ui-clock/dist/angular-clock.css" />
+    <link rel="stylesheet" href="bower_components/angularMultipleSelect/build/multiple-select.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -59,6 +60,7 @@
     <script src="bower_components/egmfilho-keys-shortcuts/src/keys.js"></script>
     <script src="bower_components/egmfilho-input-filters/src/filters.js"></script>
     <script src="bower_components/angular-ui-clock/dist/angular-clock.js"></script>
+    <script src="bower_components/angularMultipleSelect/build/multiple-select.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -123,6 +125,7 @@
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/orcamento.js"></script>
         <script src="scripts/controllers/followUp.js"></script>
+        <script src="scripts/controllers/atendimento.js"></script>
         <script src="scripts/controllers/cliente.js"></script>
         <script src="scripts/controllers/configuracoes.js"></script>
         <script src="scripts/controllers/modalPagamento.js"></script>
