--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-ui-clock/dist/angular-clock.css" />
     <link rel="stylesheet" href="bower_components/angularMultipleSelect/build/multiple-select.min.css" />
+    <link rel="stylesheet" href="bower_components/angular-bootstrap-colorpicker/css/colorpicker.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -61,6 +62,7 @@
     <script src="bower_components/egmfilho-input-filters/src/filters.js"></script>
     <script src="bower_components/angular-ui-clock/dist/angular-clock.js"></script>
     <script src="bower_components/angularMultipleSelect/build/multiple-select.min.js"></script>
+    <script src="bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
