--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="bower_components/angular-ui-clock/dist/angular-clock.css" />
     <link rel="stylesheet" href="bower_components/angularMultipleSelect/build/multiple-select.min.css" />
     <link rel="stylesheet" href="bower_components/angular-bootstrap-colorpicker/css/colorpicker.css" />
+    <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -63,6 +64,7 @@
     <script src="bower_components/angular-ui-clock/dist/angular-clock.js"></script>
     <script src="bower_components/angularMultipleSelect/build/multiple-select.min.js"></script>
     <script src="bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
+    <script src="bower_components/angular-ui-select/dist/select.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -89,6 +91,7 @@
         <script src="scripts/services/providerConfig.js"></script>
         <script src="scripts/services/providerAtendimento.js"></script>
         <script src="scripts/services/providerParecer.js"></script>
+        <script src="scripts/services/providerHistoricoAtendimento.js"></script>
         <script src="scripts/services/providerStatusAtendimento.js"></script>
         <script src="scripts/services/providerTipoContato.js"></script>
         <script src="scripts/services/pessoa.js"></script>
