--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
         <script src="scripts/constants/permissoes.js"></script>
         <script src="scripts/filters/filtroDecimal.js"></script>
         <script src="scripts/filters/truncate.js"></script>
+        <script src="scripts/filters/stripTags.js"></script>
         <script src="scripts/services/authentication.js"></script>
         <script src="scripts/services/browser.js"></script>
         <script src="scripts/services/arrayPrototype.js"></script>
@@ -132,6 +133,7 @@
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/orcamento.js"></script>
         <script src="scripts/controllers/followUp.js"></script>
+        <script src="scripts/controllers/followUpEmLote.js"></script>
         <script src="scripts/controllers/atendimento.js"></script>
         <script src="scripts/controllers/cliente.js"></script>
         <script src="scripts/controllers/configuracoes.js"></script>
