--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,7 @@
         <script src="scripts/services/historicoAtendimento.js"></script>
         <script src="scripts/services/modalAlert.js"></script>
         <script src="scripts/services/modalConfirm.js"></script>
+        <script src="scripts/services/loja.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/editableElem.js"></script>
