--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
         <script src="scripts/filters/filtroDecimal.js"></script>
         <script src="scripts/filters/truncate.js"></script>
         <script src="scripts/filters/stripTags.js"></script>
+        <script src="scripts/filters/propsFilter.js"></script>
         <script src="scripts/services/authentication.js"></script>
         <script src="scripts/services/browser.js"></script>
         <script src="scripts/services/arrayPrototype.js"></script>
