--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Commercial</title>
     <meta name="description" content="Commercial">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -129,6 +129,9 @@
         <script src="scripts/services/modalAlert.js"></script>
         <script src="scripts/services/modalConfirm.js"></script>
         <script src="scripts/services/loja.js"></script>
+        <script src="scripts/services/prazoPagamento.js"></script>
+        <script src="scripts/services/formaPagamento.js"></script>
+        <script src="scripts/services/providerPrazoPagamento.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/editableElem.js"></script>
