--- a/app/index.html
+++ b/app/index.html
@@ -137,6 +137,7 @@
         <script src="scripts/directives/editableElem.js"></script>
         <script src="scripts/directives/relogio.js"></script>
         <script src="scripts/directives/confirmPopup.js"></script>
+        <script src="scripts/directives/blurTo.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/logout.js"></script>
         <script src="scripts/controllers/header.js"></script>
