--- a/app/index.html
+++ b/app/index.html
@@ -132,6 +132,8 @@
         <script src="scripts/services/prazoPagamento.js"></script>
         <script src="scripts/services/formaPagamento.js"></script>
         <script src="scripts/services/providerPrazoPagamento.js"></script>
+        <script src="scripts/services/providerPermissao.js"></script>
+        <script src="scripts/services/modalPermissao.js"></script>
         <script src="scripts/directives/alerta.js"></script>
         <script src="scripts/directives/redireciona.js"></script>
         <script src="scripts/directives/editableElem.js"></script>
@@ -159,6 +161,7 @@
         <script src="scripts/controllers/impressao.js"></script>
         <script src="scripts/controllers/modalConfirm.js"></script>
         <script src="scripts/controllers/buscarPedido.js"></script>
+        <script src="scripts/controllers/modalPermissao.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
